syntax = "proto3";

package pbzap;
option go_package = "github.com/daneeqx/pbzap/gen;pbzap";

import "google/protobuf/descriptor.proto";

enum MaskType {
    MASK_NONE = 0;        // Не маскировать
    MASK_FULL = 1;        // "John" → "***"
    MASK_PARTIAL = 2;     // "John Smith" → "Jo** Sm***"
    MASK_HASH = 3;        // "password123" → "sha256:abc123..."
    MASK_REDACTED = 4;    // "secret" → "[REDACTED]"
    MASK_EMAIL = 5;       // "user@example.com" → "u***@ex***le.com"
    MASK_PHONE = 6;       // "+1-555-123-4567" → "+1-***-***-4567"
    MASK_CREDIT_CARD = 7; // "4111111111111111" → "**** **** **** 1111"
    MASK_SSN = 8;         // "123-45-6789" → "***-**-6789"
    MASK_CUSTOM = 9;      // "custom" → "***"
}

enum LogLevel {
    LOG_TRACE = 0;   // Самый детальный: "Entering function X"
    LOG_DEBUG = 1;   // Отладка: "Processing user request"
    LOG_INFO = 2;    // Информация: "User created"
    LOG_WARN = 3;    // Предупреждения: "Slow database query"
    LOG_ERROR = 4;   // Ошибки: "Database connection failed"
    LOG_FATAL = 5;   // Критические: "Cannot start server"
}

extend google.protobuf.FieldOptions {
    MaskType mask_type = 50000;
    string custom_mask_pattern = 50001; // e.g., "***" or "[HIDDEN]"

    // Logging control
    LogLevel log_level = 50002;
    string log_field_name = 50006;      // Custom field name in logs
    bool hide_log_field = 50007;        // Hide log field in logs   

    // Validation and formatting
    bool omit_empty = 50008;            // Skip empty values in logs
    bool flatten = 50009;               // Flatten nested objects
    string format_template = 50010;     // Custom format: "User: {name} ({id})"
    
    // Performance options
    bool lazy_eval = 50011;             // Lazy evaluation for expensive computations
    int32 max_length = 50012;           // Truncate long strings/arrays
    
    // Security and compliance
    bool pii_data = 50013;              // Mark as Personally Identifiable Information
    bool sensitive = 50014;             // Generic sensitive data marker
    repeated string compliance_tags = 50015; // ["GDPR", "HIPAA", "PCI"]    // Skip empty values in logs
}

